# kusse-folio

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEMO.md  LICENSE.md  Makefile  README.md  RELEASE.md  SETUP.md  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml
apps/: __init__.py
apps/blog/: models.py  views.py
apps/blog/templates/blog/: detail.html  list.html
apps/contact/: forms.py  views.py
apps/contact/static/css/: contact.css
apps/contact/templates/contact/: contact.html  contact_success.html
apps/core/: __init__.py  apps.py  brand.py  checks.py  context_processors.py  enquiry_types.py  sitemaps.py
apps/core/admin/: site.py
apps/core/management/commands/: seed_demo.py
apps/core/migrations/: 0003_alter_aboutprofile_experience_years.py  0005_sitesettings_homepage_project_counts.py
apps/core/models/: site.py
apps/core/templatetags/: core_tags.py
apps/pages/: __init__.py  sitemaps.py  urls.py  views.py
apps/pages/static/css/: privacy.css  website_service.css
apps/pages/templates/pages/: about.html  home.html  privacy.html  website_service.html
apps/projects/: __init__.py  models.py  views.py
apps/projects/management/commands/: bootstrap_project.py
apps/projects/migrations/: 0002_clean_category_choices.py  0003_simplify_project_taxonomy.py  0004_alter_testimonial_project.py
apps/projects/static/css/: project-cards.css  project-detail.css
apps/projects/templates/projects/: detail.html  list.html
apps/publications/: admin.py  apps.py  models.py  urls.py  views.py
apps/publications/migrations/: 0001_initial.py
apps/publications/templates/publications/: list.html
apps/research/: admin.py  models.py  urls.py  views.py
apps/research/migrations/: 0001_initial.py
apps/research/templates/research/: detail.html  list.html
apps/resume/: admin.py  apps.py  models.py  urls.py  views.py
apps/resume/migrations/: 0001_initial.py
apps/resume/templates/resume/: page.html
apps/services/: models.py
apps/services/management/commands/: seed_services.py
apps/services/static/css/: services.css
apps/services/templates/services/: list.html  services.html
apps/site/: __init__.py  apps.py
apps/site/admin/: site.py
apps/site/management/commands/: __init__.py  check_content_readiness.py  seed_demo.py
apps/site/migrations/: 0010_alter_sitesettings_nav_name.py  0011_alter_sitesettings_address.py  0014_remove_sitesettings_services_meta_description.py  0015_alter_sitesettings_hero_compact_and_more.py  0019_research_publications_resume_enabled.py  0021_sitesettings_blog_meta_description_and_more.py
apps/site/models/: site.py
config/: urls.py
config/settings/: __init__.py  base.py  dev.py  prod.py
contact/: admin.py  forms.py  models.py  urls.py  views.py
contact/migrations/: 0001_initial.py
contact/templates/contact/: contact.html  contact_success.html
docs/: DECISION_LOG.md  DOC_CHANGELOG.md  ONBOARDING-DRILL-REPORT.md  README.md  recovery-runbook.md
docs/admin/: CUSTOMIZATION.md  FIELDS.md
docs/business/: outreach-targets.md  website-service-offer.md
docs/decisions/: brand-architecture.md
docs/operations/: jat21-managed-transition-checklist.md  managed-website-policy.md
docs/product/: SCOPE.md
docs/qa/: RELEASE_CHECKLIST.md  TESTING.md  TEST_MATRIX.md
docs/releases/: academic-portfolio-variant-v0.1-readiness.md
docs/specs/: GLOBAL.md  LAYOUT.md  TECHNICAL_SPEC.md  TOKENS.md  TYPOGRAPHY.md
docs/specs/components/: HERO.md  NAVBAR.md
portfolio/: admin.py  context_processors.py  forms.py  models.py  sitemaps.py  urls.py  views.py
portfolio/admin/: __init__.py
portfolio/management/commands/: seed_demo.py
portfolio/migrations/: 0001_initial.py  0002_product_quality_pass.py  0004_projectimage_alt_text_default.py
portfolio/models/: __init__.py  project.py
portfolio/templates/portfolio/: about.html  home.html  services.html
portfolio/templatetags/: portfolio_tags.py
portfolio/views/: __init__.py  pages.py
projects/: admin.py  models.py  sitemaps.py  views.py
projects/management/commands/: bootstrap_project.py  import_project_images.py
projects/migrations/: 0001_initial.py
projects/templates/projects/: detail.html  list.html
scripts/: analyse_screenshots.py  audit_post_image_fix.py  fix_project_images.py  onboarding_drill.py  recheck_home_cta.py  smoke_check.py  take_screenshots.py  tree.py
static/css/: about.css  base.css  buttons.css  components.css  contact.css  footer.css  hero.css  main.css  nav.css  project-cards.css  projects.css  services.css  tokens.css  utilities.css
static/css/base/: base.css  layout.css  tokens.css
static/css/components/: components.css  footer.css  header.css  nav.css
static/js/: header.js  main.js
templates/: 404.html  500.html  about.html  base.html  contact.html  contact_success.html  home.html  robots.txt  services.html
templates/includes/: footer.html  header.html  nav.html
templates/projects/: detail.html  list.html
tests/: conftest.py  test_checks.py  test_forms.py  test_models.py  test_templatetags.py  test_views.py
tests/blog/: test_views.py
tests/contact/: test_views.py
tests/core/: test_checks.py  test_management_commands.py  test_models.py  test_templatetags.py  test_views.py
tests/e2e/: conftest.py  test_navigation.py  test_projects.py  test_services.py
tests/pages/: test_views.py
tests/projects/: test_migrations.py  test_models.py  test_views.py
tests/publications/: test_views.py
tests/research/: test_views.py
tests/resume/: test_views.py
tests/services/: test_models.py  test_views.py
tests/site/: test_admin.py  test_management_commands.py  test_models.py
